fix: post word wrap, optimize container layout.

--- a/source/css/layout.css
+++ b/source/css/layout.css
@@ -30,6 +30,7 @@
         .content-body {
             padding: 10px;
             background: white;
+            margin-bottom: auto;
         }
 
         .content-footer {
