--- a/source/css/post.css
+++ b/source/css/post.css
@@ -100,6 +100,10 @@
         padding: 2px 4px;
         overflow-wrap: break-word;
     }
+
+    a {
+        word-break: break-all;
+    }
 }
 
 /* 文章引用部分 */
